# content-ideas

./: .gitattributes  .gitignore  CLAUDE.md  FILE-SCHEMAS.md  README.md  pyproject.toml
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: plugin.json
.github/workflows/: release.yml  validate.yml
commands/: content-ideas.md
hooks/scripts/: check-setup.sh
scripts/: build-skill.sh
skills/content-ideas/: SKILL.md
skills/content-ideas/assets/: for-you-template.html
skills/content-ideas/references/: content-strategy.md  first-run-setup.md
skills/content-ideas/scripts/: generate_feed.py  scrape.py
skills/content-ideas/scripts/lib/: __init__.py  analyze.py  bluesky.py  dates.py  env.py  http.py  instagram.py  log.py  pipeline.py  platforms.py  reddit.py  relevance.py  scoring.py  tiktok.py  urls.py  x.py  youtube.py
tests/: helpers.py  test_analyze.py  test_dates.py  test_env.py  test_generate_feed.py  test_http.py  test_pipeline.py  test_platform_fetchers.py  test_plugin_contract.py  test_relevance.py  test_scoring.py  test_scrape.py  test_urls.py
tests/fixtures/: instagram_user_posts.json  tiktok_profile_videos.json  x_user_tweets.json  youtube_channel_videos.json
